# ashish-ai-lab

./: .env-example  README.md  main.py  pyproject.toml
prompting-techniques/: prompt-engg.ipynb
src/prompts/: prompt_templates.py  system_prompts.py
src/utils/: helper_funcs.py  llm_funcs.py
